{
  "version": 4,
  "terraform_version": "1.2.3",
  "serial": 12,
  "lineage": "d45d01c5-3fc0-4c55-58e2-9db3c31046a5",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "http-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-07-04T22:34:04.049-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gcp-johnlee2022-352701/global/firewalls/default-allow-http-terraform",
            "log_config": [],
            "name": "default-allow-http-terraform",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-johnlee2022-352701/global/networks/new-vpc",
            "priority": 1000,
            "project": "gcp-johnlee2022-352701",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-johnlee2022-352701/global/firewalls/default-allow-http-terraform",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-07-04T23:06:37.155-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gcp-johnlee2022-352701/global/firewalls/default-allow-ssh-terraform",
            "log_config": [],
            "name": "default-allow-ssh-terraform",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-johnlee2022-352701/global/networks/new-vpc",
            "priority": 1000,
            "project": "gcp-johnlee2022-352701",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-johnlee2022-352701/global/firewalls/default-allow-ssh-terraform",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20220621",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/gcp-johnlee2022-352701/zones/asia-northeast3-a/disks/vm-from-terraform"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/gcp-johnlee2022-352701/zones/asia-northeast3-a/instances/vm-from-terraform",
            "instance_id": "2261066758543537058",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "twdRUw2y3v0=",
            "metadata_startup_script": "#!/bin/bash\napt update\napt install -y apache2\necho \"Hello GCP Terraform\" \u003e /var/www/html/index.html\n",
            "name": "vm-from-terraform",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.64.205.145",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/gcp-johnlee2022-352701/global/networks/new-vpc",
                "network_ip": "192.168.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/gcp-johnlee2022-352701/regions/asia-northeast3/subnetworks/new-subnet",
                "subnetwork_project": "gcp-johnlee2022-352701"
              }
            ],
            "project": "gcp-johnlee2022-352701",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-johnlee2022-352701/zones/asia-northeast3-a/instances/vm-from-terraform",
            "tags": [
              "http-server"
            ],
            "tags_fingerprint": "FYLDgkTKlA4=",
            "zone": "asia-northeast3-a"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "custom-test",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/gcp-johnlee2022-352701/global/networks/new-vpc",
            "mtu": 0,
            "name": "new-vpc",
            "project": "gcp-johnlee2022-352701",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-johnlee2022-352701/global/networks/new-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "network-with-private-ip-ranges",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-07-04T22:28:49.365-07:00",
            "gateway_address": "192.168.0.1",
            "id": "projects/gcp-johnlee2022-352701/regions/asia-northeast3/subnetworks/new-subnet",
            "ip_cidr_range": "192.168.0.0/16",
            "name": "new-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-johnlee2022-352701/global/networks/new-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "gcp-johnlee2022-352701",
            "purpose": "PRIVATE",
            "region": "asia-northeast3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-johnlee2022-352701/regions/asia-northeast3/subnetworks/new-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.custom-test"
          ]
        }
      ]
    }
  ]
}